1998-05-07  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c: Changed required for gmc icon view.
	(icon_new_from_imlib): New routine, this is now used internally to
	create an icon from an Imlib image.
	(gnome_icon_list_append_imlib): New routine: add icons from an
	Imlib created image.
	(gnome_icon_list_append): Modified, load the file and call
	gnome_icon_list_append_imlib.
	(toggle_icon): Implemented the Windows-like selection scheme.

Thu May  7 19:13:33 1998  Havoc Pennington  <hp@pobox.com>

	* Makefile.am, libgnomeui.h: Add gnome-less
	* gnome-less.h, gnome-less.c: Set default width to 80 columns
	when the font is changed.
	* TODO: Check this item off.
	* gnome-preferences.h: Fiddled around, not important.
	
Thu May  7 15:47:21 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-about.c (gnome_about_new): Use set_close instead of
	deprecated set_destroy.

Wed May 06 23:00:55 1998  George Lebl  <jirka@5z.com>

	* stock_demo.c: it's now possible to get rid of the damn
	  "really quit" window, without actually quitting

Wed May 06 22:42:40 1998  George Lebl  <jirka@5z.com>

	* gnome-dialog.c: emitting the close signal passed a NULL
	  where a pointer to retval was supposed to be producing
	  a segfault

Wed May  6 18:54:54 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.h, gnome-dialog.c: Recommit of April 30 changes;
	difference is using a new "close" signal instead of delete_event.
	However, the "close" signal marshaller segfaults for now.
	* gnome-messagebox.c, gnome-propertybox.c: Use new gnome-dialog
	stuff.
	* gnome-uidefs.h: GNOME_YES, GNOME_NO to make button handling
	more readable; also for use with gnome-app-util
	* stock-demo.c: Use new dialog stuff; try to use "close" signal
	just to expose the bug.
	* TODO: Updated.
	* gnome-app-util.h, gnome-app-util.c: Started on the
	dialog/statusbar abstraction; status bar part doesn't work
	yet.
	* gnome-preferences.h: Define sections and keys for use in 
	libgnomeui global preferences.
